force-app/main/default/objects/User_Audit_Log__c/User_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Log record for a user audit.  This is the master record and corresponds to a single audit run.  The child records consist of a single record for each matched contact.  Generated as part of the User Audit Lightning page.</description>
    <label>User Audit Log</label>
    <nameField>
        <label>User Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>