force-app/main/default/objects/User_Audit_Log__c/fields/Async_Job_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Coordinator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job coordinator - used to track long running batchable job.</description>
    <inlineHelpText>Job coordinator - used to track long running batchable job.</inlineHelpText>
    <label>Async Job Coordinator</label>
    <referenceTo>Async_Job_Coordinator__c</referenceTo>
    <relationshipLabel>User Audit Logs</relationshipLabel>
    <relationshipName>User_Audit_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>