force-app/main/default/objects/User_Audit_Log__c/fields/Initial_Count__c.field-meta.xml
<CustomField>
    <fullName>Initial_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of ASURITEs initially uploaded for processing.</description>
    <inlineHelpText>The total number of ASURITEs initially uploaded for processing.</inlineHelpText>
    <label>Initial Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>