force-app/main/default/objects/User_Audit_Log__c/fields/Matched_Count__c.field-meta.xml
<CustomField>
    <fullName>Matched_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of users that were successfully matched during the audit.</description>
    <inlineHelpText>Total number of users that were successfully matched during the audit.</inlineHelpText>
    <label>Matched Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>