force-app/main/default/objects/User_Audit_Log__c/fields/Skipped_Count__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Count__c</fullName>
    <description>Total number of users that were NOT matched during the audit.</description>
    <formula>Initial_Count__c  -  Matched_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of users that were NOT matched during the audit.</inlineHelpText>
    <label>Skipped Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>